# duckarrow

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  callback_registration.c  config_function.go  duckarrow-local.sql  execute_function.go  go.mod  main.go  query_builder.go  query_builder_test.go  replacement_scan.go  scan_callbacks.go  table_function.go  version_function.go
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
cpp/: CMakeLists.txt  duckarrow_catalog.cpp  duckarrow_catalog.hpp  duckarrow_compat.hpp  duckarrow_schema.cpp  duckarrow_schema.hpp  duckarrow_storage.cpp  duckarrow_storage.hpp  duckarrow_table.cpp  duckarrow_table.hpp  duckarrow_transaction_manager.cpp  duckarrow_transaction_manager.hpp  duckdb_stubs.cpp  go_callbacks.h
docs/: _config.yml  index.md
internal/flight/: client.go  pool.go  pool_test.go
internal/validation/: validation.go  validation_test.go
tests/: attach_basic_test.sql  connection_pool_test.sql  connection_test.sql  data_types_test.sql  env_var_test.sql  error_handling_test.sql  full_test.sql  hardcoded_test.sql  information_schema_test.sql  integration_test.sql  projection_pushdown_test.sql  qualified_queries_test.sql  replacement_scan_test.sql  show_schemas_test.sql  show_tables_test.sql
